add users route as requested in #2
add users route with get method to get all users
